# chess_engine

./: CMakeLists.txt  README.md  chess_engine.cpp
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  castling_rights.cpp  castling_rights.h  color.h  direction.h  fen_parser.cpp  fen_parser.h  mask.h  move.cpp  move.h  move_generator.cpp  move_generator.h  piece.cpp  piece.h  position.cpp  position.h  square.h
tests/: CMakeLists.txt  bitboard_test.cpp  castling_rights_test.cpp  fen_parser_test.cpp  move_generator_test.cpp  move_test.cpp  perft_test.cpp  piece_test.cpp  position_test.cpp
